--- a/DemoPrototype/TunePage.xaml
+++ b/DemoPrototype/TunePage.xaml
@@ -22,15 +22,29 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
+        <!--  Two borders -->
+        <Border  Margin="5,5,10,5" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="4" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5">
+            <StackPanel Orientation="Vertical">
+                <TextBlock Margin="5,0,0,0" Text="Delay timings (Feed and Return valves)" FontWeight="SemiBold"></TextBlock>
+            </StackPanel>
+        </Border>
+
+
+        <Border  Margin="5,5,10,5" Grid.Row="2" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="4" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5">
+            <StackPanel Orientation="Vertical">
+                <TextBlock Margin="5,0,0,0" Text="Balancing" FontWeight="SemiBold"></TextBlock>
+            </StackPanel>
+        </Border>
+
         <!--  Delay times -->
-        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
-            <TextBlock Margin="30,30,0,0" > Tempering delay time Feed-to-Return</TextBlock>
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2">
+            <TextBlock Margin="50,30,0,0" > Tempering delay time Feed-to-Return</TextBlock>
         </StackPanel>
 
-        <TextBlock Margin="0,30,0,0" Grid.Row="0" Grid.Column="1"> Calibrate + Tune = Total</TextBlock>
+        <TextBlock Margin="0,30,0,0" Grid.Row="0" Grid.Column="3"> Calibrate + Tune = Total</TextBlock>
 
-        <TextBlock VerticalAlignment="Center"  Margin="30,0,0,0" Grid.Row="0" Grid.Column="0" Text="Hot pump"></TextBlock>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left"  VerticalAlignment="Center" Margin="0,0,30,0" Grid.Row="0" Grid.Column="1">
+        <TextBlock VerticalAlignment="Center"  Margin="50,0,0,0" Grid.Row="0" Grid.Column="2" Text="Hot pump"></TextBlock>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left"  VerticalAlignment="Center" Margin="0,0,30,0" Grid.Row="0" Grid.Column="3">
             <TextBlock  Name="TextBlock_HotCalibrate" VerticalAlignment="Bottom" Margin="0,0,0,0" Text="88"></TextBlock>
             <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="+"></TextBlock>
             <TextBox Name="HotFeedToReturnDelayCalTime" GotFocus="HotFeedToReturnDelayCalTime_GotFocus" TextChanged="HotFeedToReturnDelayCalTime_TextChanged" IsReadOnly="True" VerticalAlignment="Bottom" Margin="10,0,0,0" Text="22"></TextBox>
@@ -40,8 +54,8 @@
         </StackPanel>
 
         <TextBox Visibility="Collapsed" Name="TextBox_FocusControl"></TextBox>
-        <TextBlock  Margin="30,0,0,30" VerticalAlignment="Bottom" Grid.Row="0" Grid.Column="0" Text="Cold pump"></TextBlock>
-        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,0,30,30" Grid.Row="0" Grid.Column="1">
+        <TextBlock  Margin="50,0,0,30" VerticalAlignment="Bottom" Grid.Row="0" Grid.Column="2" Text="Cold pump"></TextBlock>
+        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,0,30,30" Grid.Row="0" Grid.Column="3">
             <TextBlock Name="TextBlock_ColdCalibrate" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="0,0,0,0" Text="110"></TextBlock>
             <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="+"></TextBlock>
             <TextBox Name="ColdFeedToReturnDelayCalTime"  GotFocus="ColdFeedToReturnDelayCalTime_GotFocus" TextChanged="ColdFeedToReturnDelayCalTime_TextChanged" IsReadOnly="True" Margin="10,0,0,0" VerticalAlignment="Bottom" Text="33"></TextBox>
@@ -50,5 +64,8 @@
             <TextBlock Margin="8,0,0,0" VerticalAlignment="Bottom" Text="(s)"></TextBlock>
         </StackPanel>
 
+        <!-- Freeze button -->
+        <Button Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom" Margin="50,0,0,40" Content="Freeze Charts"></Button>
+        
     </Grid>
 </Page>
