--- a/DemoPrototype/CalibratePage.xaml
+++ b/DemoPrototype/CalibratePage.xaml
@@ -72,8 +72,8 @@
 
             <!--   <chart:LineSeries Name="Series_Delay_TRetActual" LegendIcon="Circle" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
                      <chart:StepLineSeries Name="Series_Delay_TRetForecasted" LegendIcon="Circle" Label="TRetForecasted" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:StepLineSeries>
-      -->      <chart:LineSeries Name="Series_Delay_THotTank" LegendIcon="Circle" Label="THotTank" XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"></chart:LineSeries>
-            <chart:LineSeries Name="Series_Delay_TColdTank" LegendIcon="Circle" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TColdTank" ItemsSource="{Binding power}"></chart:LineSeries>
+      -->      <chart:SplineSeries Name="Series_Delay_THotTank" LegendIcon="Circle" Label="THotTank" XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"></chart:SplineSeries>
+            <chart:SplineSeries Name="Series_Delay_TColdTank" LegendIcon="Circle" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TColdTank" ItemsSource="{Binding power}"></chart:SplineSeries>
         </chart:SfChart>
         <!-- Use overlay textbox for showing diff result -->
         <TextBox Grid.Column="1" Grid.Row="3" Name="CalibratePhaseDiffResult" HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="0" Background="Yellow" Text="2.31 s"></TextBox>
@@ -96,9 +96,9 @@
             <ToggleSwitch  Margin="5,0,0,0"  Toggled="DoCycle" VerticalAlignment="Center" IsOn="False" ></ToggleSwitch>
         </StackPanel>
 
-        <Button Margin="10,0,10,0" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Right" Content="Freeze" Name="Button_Freeze_Run" Click="Button_Freeze_Run_Click"></Button>
+        <Button Margin="10,0,10,0" Grid.Row="4" Grid.Column="0" Width="80" HorizontalAlignment="Right" Content="Freeze" Name="Button_Freeze_Run" Click="Button_Freeze_Run_Click"></Button>
 
-        <TextBlock VerticalAlignment="Top" Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2"> Tempering delay time Feed-to-Return </TextBlock>
+        <TextBlock Margin="30,0,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2"> Tempering delay time Feed-to-Return </TextBlock>
         <StackPanel Grid.Column="4" Orientation="Horizontal"  Grid.Row="1" Grid.ColumnSpan="3" VerticalAlignment="Bottom">
             <TextBlock  VerticalAlignment="Bottom"  Text="Calibrate"></TextBlock>
             <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="+"></TextBlock>
@@ -106,8 +106,8 @@
             <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="="></TextBlock>
             <TextBlock VerticalAlignment="Bottom" Margin="5,0,0,0" Text="Total"></TextBlock>
         </StackPanel>
-        
-        <TextBlock Grid.Row="2" Grid.Column="3" Text="Hot pump" VerticalAlignment="Bottom" HorizontalAlignment="Center"> </TextBlock>
+
+        <TextBlock Margin="30,0,0,0" Grid.Row="2" Grid.Column="3" Text="Hot pump" VerticalAlignment="Bottom" HorizontalAlignment="Left"> </TextBlock>
         <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="4" Grid.ColumnSpan="2">
             <TextBox   Name="HotFeedToReturnDelayTime" GotFocus="HotFeedToReturnDelayTime_GotFocus"  TextChanged="HotFeedToReturnDelayTime_TextChanged" VerticalAlignment="Bottom"  Text="88"></TextBox>
             <TextBlock VerticalAlignment="Bottom"  TextAlignment="Center" Width="30" Margin="5,0,0,5" Text="+"></TextBlock>
@@ -118,7 +118,7 @@
         </StackPanel>
         
 
-        <TextBlock Grid.Row="3" Grid.Column="3" Text="Cold pump" VerticalAlignment="Bottom" HorizontalAlignment="Center"></TextBlock>
+        <TextBlock Margin="30,0,0,0" Grid.Row="3" Grid.Column="3" Text="Cold pump" VerticalAlignment="Bottom" HorizontalAlignment="Left"></TextBlock>
         <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="4" Grid.ColumnSpan="2">
             <TextBox   Name="ColdFeedToReturnDelayTime" GotFocus="ColdFeedToReturnDelayTime_GotFocus" TextChanged="ColdFeedToReturnDelayTime_TextChanged" VerticalAlignment="Bottom"  Text="1110"></TextBox>
             <TextBlock VerticalAlignment="Bottom"  TextAlignment="Center" Width="30" Margin="5,0,0,5" Text="+"></TextBlock>
@@ -139,7 +139,7 @@
 
         <!--Energy balance chart-->
         <chart:SfChart  
-            Header="Hot and Cold tanks Energy balance (°C)"
+            Header="Energy (Hot and Cold tanks) (°C)"
             Grid.Row="5"
             Grid.RowSpan="3"
             Grid.ColumnSpan="2"
@@ -183,7 +183,7 @@
 
         <!-- Volume balance chart-->
         <chart:SfChart  
-            Header="Buffer tank Volume balance (°C)"
+            Header="Volume (Buffer tank) (°C)"
             Grid.Row="5"
              Grid.Column="2"
             Grid.RowSpan="3"
@@ -212,8 +212,8 @@
             </chart:SfChart.Annotations>
   <!--       <chart:FastLineBitmapSeries Name="Series_VB_THotBuffer" LegendIcon="Circle" Label="THotBuf" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:FastLineBitmapSeries>
             <chart:FastLineSeries Name="Series_VB_TMidBuffer" LegendIcon="Circle" Label="TMidBuf" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:FastLineSeries>
-            <chart:FastLineSeries Name="Series_VB_TColdBuffer" LegendIcon="Circle" Label="TColdBuf" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:FastLineSeries>
- -->   </chart:SfChart>
+ -->         <chart:SplineSeries Name="Series_VB_TColdBuffer" LegendIcon="Circle" Label="TColdBuf" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:SplineSeries>
+    </chart:SfChart>
       
         <TextBlock Margin="30,0,0,0" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="8" VerticalAlignment="Center" Text="Buffertank mid threshold value:"></TextBlock>
         <StackPanel Orientation="Horizontal" Grid.Column="4" Grid.Row="8">
