--- a/DemoPrototype/TunePage.xaml
+++ b/DemoPrototype/TunePage.xaml
@@ -65,7 +65,7 @@
         </StackPanel>
 
         <!-- Freeze button -->
-        <Button Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom" Margin="50,0,0,40" Content="Freeze Charts"></Button>
+        <Button Name="TuneFreezeButton" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom" Margin="50,0,0,40" Click="TuneFreezeButton_Click"  Width="80" Content="Freeze"></Button>
         
     </Grid>
 </Page>
